Fix wraps

--- a/src/timeline.module.css
+++ b/src/timeline.module.css
@@ -9,15 +9,18 @@
     position: absolute;
     left: 0;
     top: 25px;
+    height: 20px;
     width: 20px;
+    transform: rotate(90deg);
+    transform-origin: 0 0;
     z-index: 1;
 }
 
 .timeWrap div {
     font-size: 9pt;
     color: darkgrey;
-    transform: rotate(-90deg);
     text-align: center;
+    transform: rotate(180deg);
 }
 
 .baseCell {
@@ -32,7 +35,8 @@
 .headerGroupCell {
     composes: baseCell;
     top: 0;
-    height: 25px;
+    height: 26px;
+    background: linear-gradient(white, lightgray 100%);
 }
 
 .headerCell {
